# dog_game

./: .clang-uml  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
data/: config.json
src/: app.cpp  app.h  collision_detector.cpp  collision_detector.h  connection_pool.h  db.cpp  db.h  domain.cpp  domain.h  geom.h  handler_serializer.cpp  handler_serializer.h  http_server.cpp  http_server.h  infrastructure.cpp  infrastructure.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  loot.cpp  loot.h  main.cpp  model.cpp  model.h  model_dog.cpp  model_dog.h  model_geometry.cpp  model_geometry.h  model_json.cpp  model_json.h  request_handler.cpp  request_handler.h  serialization.h  tagged.h  ticker.h
tests/: collision_detector_tests.cpp  loot_generator_tests.cpp  model_tests.cpp  state-serialization-tests.cpp
